resolving deploy